# ocs2

ocs2/: CMakeLists.txt  package.xml
ocs2_core/: CMakeLists.txt  package.xml
ocs2_ddp/: CMakeLists.txt  package.xml
ocs2_doc/: package.xml
ocs2_frank_wolfe/: CMakeLists.txt  package.xml
ocs2_mpc/: CMakeLists.txt  package.xml
ocs2_mpcnet/ocs2_ballbot_mpcnet/: CMakeLists.txt  package.xml
ocs2_mpcnet/ocs2_ballbot_mpcnet/src/: BallbotMpcnetDummyNode.cpp  BallbotMpcnetInterface.cpp
ocs2_mpcnet/ocs2_legged_robot_mpcnet/: CMakeLists.txt  package.xml
ocs2_mpcnet/ocs2_legged_robot_mpcnet/src/: LeggedRobotMpcnetDummyNode.cpp  LeggedRobotMpcnetInterface.cpp
ocs2_mpcnet/ocs2_mpcnet_core/: CMakeLists.txt  package.xml
ocs2_mpcnet/ocs2_mpcnet_core/include/ocs2_mpcnet_core/dummy/: MpcnetDummyObserverRos.h
ocs2_mpcnet/ocs2_mpcnet_core/src/dummy/: MpcnetDummyLoopRos.cpp  MpcnetDummyObserverRos.cpp
ocs2_msgs/: CMakeLists.txt  package.xml
ocs2_msgs/msg/: MPCFlattenedController.msg
ocs2_ocs2/: CMakeLists.txt  package.xml
ocs2_perceptive/: CMakeLists.txt  package.xml
ocs2_pinocchio/ocs2_centroidal_model/: CMakeLists.txt  package.xml
ocs2_pinocchio/ocs2_pinocchio_interface/: CMakeLists.txt  package.xml
ocs2_pinocchio/ocs2_self_collision_visualization/: CMakeLists.txt  package.xml
ocs2_pinocchio/ocs2_self_collision_visualization/include/ocs2_self_collision_visualization/: GeometryInterfaceVisualization.h
ocs2_pinocchio/ocs2_self_collision_visualization/src/: GeometryInterfaceVisualization.cpp
ocs2_pinocchio/ocs2_sphere_approximation/: CMakeLists.txt  package.xml
ocs2_python_interface/: CMakeLists.txt  package.xml
ocs2_raisim/ocs2_legged_robot_raisim/: CMakeLists.txt  package.xml
ocs2_raisim/ocs2_legged_robot_raisim/include/ocs2_legged_robot_raisim/: LeggedRobotRaisimVisualizer.h
ocs2_raisim/ocs2_legged_robot_raisim/src/: LeggedRobotRaisimDummyNode.cpp  LeggedRobotRaisimVisualizer.cpp
ocs2_raisim/ocs2_legged_robot_raisim/test/: testLeggedRobotRaisimConversions.cpp
ocs2_raisim/ocs2_raisim_ros/: CMakeLists.txt  package.xml
ocs2_raisim/ocs2_raisim_ros/include/ocs2_raisim_ros/: RaisimHeightmapRosConverter.h
ocs2_raisim/ocs2_raisim_ros/src/: RaisimHeightmapRosConverter.cpp
ocs2_raisim/ocs2_raisim_ros/test/: testRosConversion.cpp
ocs2_robotic_examples/ocs2_ballbot/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_ballbot/src/: BallbotSimpleExample.cpp
ocs2_robotic_examples/ocs2_ballbot_ros/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_ballbot_ros/include/ocs2_ballbot_ros/: BallbotDummyVisualization.h
ocs2_robotic_examples/ocs2_ballbot_ros/src/: BallbotDdpMpcNode.cpp  BallbotDummyVisualization.cpp  BallbotMpcMrtNode.cpp  BallbotSlpMpcNode.cpp  BallbotSqpMpcNode.cpp  BallbotTargetPoseCommand.cpp  DummyBallbotNode.cpp
ocs2_robotic_examples/ocs2_ballbot_ros/test/: ballbotIntegrationTest.cpp
ocs2_robotic_examples/ocs2_cartpole_ros/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_cartpole_ros/include/ocs2_cartpole_ros/: CartpoleDummyVisualization.h
ocs2_robotic_examples/ocs2_cartpole_ros/launch/: cartpole.launch  visualize.launch.py
ocs2_robotic_examples/ocs2_cartpole_ros/rviz/: cartpole.rviz
ocs2_robotic_examples/ocs2_cartpole_ros/src/: CartpoleDummyVisualization.cpp  CartpoleMpcNode.cpp  DummyCartpoleNode.cpp
ocs2_robotic_examples/ocs2_double_integrator/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_double_integrator_ros/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_double_integrator_ros/include/ocs2_double_integrator_ros/: DoubleIntegratorDummyVisualization.h
ocs2_robotic_examples/ocs2_double_integrator_ros/src/: DoubleIntegratorDummyVisualization.cpp  DoubleIntegratorMpcNode.cpp  DoubleIntegratorTargetPoseCommand.cpp  DummyDoubleIntegratorNode.cpp
ocs2_robotic_examples/ocs2_legged_robot/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_legged_robot_ros/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_legged_robot_ros/include/ocs2_legged_robot_ros/gait/: GaitKeyboardPublisher.h  GaitReceiver.h
ocs2_robotic_examples/ocs2_legged_robot_ros/include/ocs2_legged_robot_ros/visualization/: LeggedRobotVisualizer.h
ocs2_robotic_examples/ocs2_legged_robot_ros/src/: LeggedRobotDdpMpcNode.cpp  LeggedRobotDummyNode.cpp  LeggedRobotGaitCommandNode.cpp  LeggedRobotIpmMpcNode.cpp  LeggedRobotPoseCommandNode.cpp  LeggedRobotSqpMpcNode.cpp
ocs2_robotic_examples/ocs2_legged_robot_ros/src/gait/: GaitKeyboardPublisher.cpp  GaitReceiver.cpp
ocs2_robotic_examples/ocs2_legged_robot_ros/src/visualization/: LeggedRobotVisualizer.cpp
ocs2_robotic_examples/ocs2_mobile_manipulator_ros/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_mobile_manipulator_ros/include/ocs2_mobile_manipulator_ros/: MobileManipulatorDummyVisualization.h
ocs2_robotic_examples/ocs2_mobile_manipulator_ros/src/: MobileManipulatorDistanceVisualization.cpp  MobileManipulatorDummyMRT.cpp  MobileManipulatorDummyVisualization.cpp  MobileManipulatorMpcNode.cpp  MobileManipulatorTarget.cpp
ocs2_robotic_examples/ocs2_quadrotor/: CMakeLists.txt  package.xml
ocs2_robotic_tools/: CMakeLists.txt  package.xml
ocs2_ros_interfaces/: CMakeLists.txt  package.xml
ocs2_ros_interfaces/include/ocs2_ros_interfaces/command/: TargetTrajectoriesJoystickPublisher.h
ocs2_ros_interfaces/include/ocs2_ros_interfaces/common/: RosMsgConversions.h
ocs2_ros_interfaces/include/ocs2_ros_interfaces/mpc/: MPC_ROS_Interface.h
ocs2_ros_interfaces/include/ocs2_ros_interfaces/synchronized_module/: SolverObserverRosCallbacks.h
ocs2_ros_interfaces/src/command/: TargetTrajectoriesJoystickPublisher.cpp
ocs2_ros_interfaces/src/common/: RosMsgConversions.cpp
ocs2_ros_interfaces/src/mpc/: MPC_ROS_Interface.cpp
ocs2_ros_interfaces/src/mrt/: MRT_ROS_Dummy_Loop.cpp  MRT_ROS_Interface.cpp
ocs2_ros_interfaces/src/synchronized_module/: SolverObserverRosCallbacks.cpp
ocs2_ros_interfaces/test/: test_custom_callback_queue.cpp
ocs2_slp/: CMakeLists.txt  package.xml
ocs2_thirdparty/: CMakeLists.txt  package.xml
(+36 files in other folders)
