<?xml version="1.0"?>
<package format="2">
  <name>ocs2</name>
  <version>1.0.0</version>
  <description>Metapackage for OCS2</description>

  <maintainer email="farbod.farshidian@gmail.com">Farbod Farshidian</maintainer>
  <maintainer email="jcarius@ethz.ch">Jan Carius</maintainer>
  <maintainer email="rgrandia@ethz.ch">Ruben Grandia</maintainer>
  <license>BSD3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ocs2_core</depend>
  <depend>ocs2_mpc</depend>
  <depend>ocs2_frank_wolfe</depend>
  <depend>ocs2_oc</depend>
  <depend>ocs2_qp_solver</depend>
  <depend>ocs2_ddp</depend>
  <depend>ocs2_slp</depend>
  <depend>ocs2_sqp</depend>
  <depend>ocs2_ros_interfaces</depend>
  <depend>ocs2_python_interface</depend>
  <depend>ocs2_pinocchio</depend>
  <depend>ocs2_robotic_tools</depend>
  <depend>ocs2_perceptive</depend>
  <depend>ocs2_robotic_examples</depend>
  <depend>ocs2_thirdparty</depend>
  <depend>ocs2_raisim</depend>
  <depend>ocs2_mpcnet</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>